sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def selectcible(): {for (i<-1 to (t-estT)) {if (tmt<getRayonCrepe(i)) {n=i; tmt=getRayonCrepe(i)}};return n}
                    ^BasicPancake:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def selectcible(): {for (i<-1 to (t-estT)) {if (tmt<getRayonCrepe(i)) {n=i; tmt=getRayonCrepe(i)}};return n}
                                                                                                   ^