sort.pancake.lessons.sort.pancake.BasicPancake.scala.code
var ct:Int=0
var tmt:In=getRayonCrepe(0)
var n:Int=0
val t:Int=getTaillePile()-1
var estT:Int=0
def selectcible(): {for (i<-1 to (t-estT)) {if (tmt<getRayonCrepe(i)) {n=i; tmt=getRayonCrepe(i)}};return n}
def solve() {while (!estTriee) {tmt=getRayonCrepe(0); ct=selectcible(); retourne(ct);retourne(t-estT);estT=estT+1}}